--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
         "laravel-mix": "^6.0.28",
         "popper.js": "^1.12",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
+        "sass-loader": "^11.0.0",
         "select2": "^4.0.13",
         "sweetalert": "^1.1.3",
+        "sweetalert2": "^11.7.20",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.12"
     }
