--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.2",
-        "spatie/laravel-permission": "^4.3"
+        "spatie/laravel-backup": "^7.8",
+        "spatie/laravel-permission": "^4.3",
+        "symfony/process": "^5.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
